<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingLeft="15dp" >

        <TextView
            android:id="@+id/txttitulo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/txtdetalle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

   <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical" >
	
        <TextView
            android:id="@+id/razonsocial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/razon_social"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        <TextView
                android:id="@+id/txtrazonsocial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/direccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        <TextView
                android:id="@+id/txtdireccion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/telefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        <TextView
                android:id="@+id/txttelefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        
         <TextView
            android:id="@+id/facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        <TextView
                android:id="@+id/txtfacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        
         <TextView
            android:id="@+id/twitter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
        <TextView
                android:id="@+id/txttwitter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
    </LinearLayout>
	
</LinearLayout>